MERN_AI_FILE_ORGANIZER/start.log

> mern_ai_file_organizer@1.0.0 start
> electron .


App threw an error during load
G:\pro\file org copy\MERN_AI_FILE_ORGANIZER\main.js:84
            return {
                   ^

SyntaxError: Unexpected token '{'
    at wrapSafe (node:internal/modules/cjs/loader:1645:18)
    at Module._compile (node:internal/modules/cjs/loader:1687:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1848:10)
    at Module.load (node:internal/modules/cjs/loader:1448:32)
    at Module._load (node:internal/modules/cjs/loader:1270:12)
    at c._load (node:electron/js2c/node_init:2:17993)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
    at cjsLoader (node:internal/modules/esm/translators:313:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:202:7)
